@@ -1,29 +1,18 @@
 This is a means of exposing various controls to NRPNs.
 
-Many of the commands produce log output in a manner designed to be compatible with both the GUI reports window and with a CLI readline environment.
+All of the commands produce log output in a manner designed to be compatible with both the GUI reports window and with a CLI readline environment.
 
-There are two integer parameters passed in:
-type    obvious!
-value   the purpose (if any) dependent on the actual function called.
+To access these, set NRPN MSB (CC 99) to 64 and NRPN LSB (CC 98) to 2 (8130). After that send the following Data values. The command with LSB x doesn’t actually use Data LSB, but you still needs to send it.
 
-Type:
-   2    value = master key shift
 
-   7    value = master volume
-
-64-79   type = channel number (+ 64) value = keyshift
-
- 80     value = root CC
-
- 81     value = bank CC
-
- 82     value > 63 = enable program change
-
- 83     value > 63 = enable part on program change
-
- 84     value = extended program change CC > 119 disables
-
- 85     value = number of parts to be made available (16, 32, 64)
-
- 86     save current settings
-
+Data MSB    Data LSB            Setting
+    2         key         Set master key shift, key-64 (-36 to +36)
+    7         volume      Set master Volume ’volume’
+ 64 to 79     key         Set channel (MSB-64) key shift, key-64 (-36 to +36)
+    80        root        Set CC to control Root path change (>119 disables)
+    81        bank        Set CC to control Bank change (>119 disables)
+    82        >63         Enable Program change otherwise disable
+    83        >63         Enable activation of part when program changed
+    84        extended    Set CC control Extended program change (>119 disables)
+    85        parts       Set number of available parts (16, 32 or 64)
+    86        x           Save all dynamic settings
