@@ -2005,6 +2005,7 @@ int ADnote::noteout(float *outl, float *outr)
                 Legato.decounter--;
                 if (Legato.decounter < 1)
                 {
+                    synth->part[synth->legatoPart]->legatoFading = false;
                     // Catching-up done, we can finally set
                     // the note to the actual parameters.
                     Legato.decounter = -10;
